--- a/dex/index.html
+++ b/dex/index.html
@@ -404,7 +404,7 @@
     /* Form Elements */
     .form-grid {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr;
       gap: 15px;
     }
 
@@ -1038,7 +1038,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0, 0, 0, 0.15);
       z-index: 9999;
       display: flex;
       flex-direction: column;
@@ -1230,10 +1230,7 @@
           <div class="divider"></div>
 
           <div class="form-grid">
-            <div class="form-group">
-              <label for="airtime-target">Receiving EVM Address</label>
-              <input id="airtime-target" class="mono" placeholder="Site EVM receiving address" required />
-            </div>
+              <input id="airtime-target" class="mono" placeholder="Site EVM receiving address" readonly hidden required />
               <input id="airtime-nano" class="mono" placeholder="Auto-calculated" required readonly hidden/>
 
             <div class="form-group">
@@ -2246,6 +2243,9 @@
     }
     function inferTxType(item, userAddr) {
       if (item.servicename === 'Refund') return 'Refund';
+      if (item.servicename === 'Airtime') return 'Airtime';
+      if (item.servicename === 'Data') return 'Data';
+      if (item.servicename === 'Wallet Credit') return 'Deposit';
       const from = (item.senderaddress || '').toLowerCase();
       const to = (item.targetaddress || '').toLowerCase();
       const u = (userAddr || '').toLowerCase();
@@ -2298,6 +2298,10 @@
             statusText = 'refunded';
             statusClass = 'success';
         }
+        if (item.servicename === 'Refund' && Number(item.status) === 1) {
+            statusText = 'refund failed';
+            statusClass = 'failed';
+        }
         const statusEl = document.createElement('div'); statusEl.className = 'history-status ' + statusClass; statusEl.textContent = statusText;
         bot.appendChild(amount); bot.appendChild(statusEl);
 
@@ -2343,7 +2347,8 @@
         service: (item.servicename || item.service || (item.data_plan ? 'Data Purchase' : 'Airtime Purchase')),
         purchaseValue: (item.data_plan ? ((item.plan_label || item.plan_name || item.data_plan) + ' Data') : ((item.amount ? `${item.amount}N Airtime` : `N${item.amount || '0.00'} Airtime`))),
         providerDisplay: parsedProvider || '—',
-        recipientPhone: parsedPhone || 'N/A'
+        recipientPhone: parsedPhone || 'N/A',
+        description: item.servicedesc || item.servicedescription || ''
       };
       const card = openReceiptModal(model);
       (async () => {
@@ -2611,6 +2616,7 @@
         { k: 'Value', v: model.purchaseValue || amt },
         { k: 'Service Provider', v: model.providerDisplay || '—' },
         { k: 'Recipient', v: model.recipientPhone || 'N/A' },
+        { k: 'Description', v: model.description || '—' },
         { k: 'Amount', v: amt },
       ];
       if (model.hash) {
@@ -2642,7 +2648,7 @@
       const btnExp = document.createElement('button'); btnExp.className = 'btn btn-secondary'; btnExp.textContent = 'Check Explorer'; btnExp.setAttribute('aria-label', 'Open transaction in explorer');
       btnView.onclick = () => {
         try {
-          const params = new URLSearchParams({ status: model.status || 'pending', amount: String(model.tokenAmount || '0'), symbol: model.symbol || '', sender: model.from || '', target: model.to || '', txHash: model.hash || '', timestamp: String(model.timestamp || Date.now()), service: model.service || '', provider: model.providerDisplay || 'N/A', recipient: model.recipientPhone || 'N/A', fiatValue: model.amountDisplay || '', reference: model.reference  || '', tokenAmount: model.tokenAmount || '' });
+          const params = new URLSearchParams({ status: model.status || 'pending', amount: String(model.tokenAmount || '0'), symbol: model.symbol || '', sender: model.from || '', target: model.to || '', txHash: model.hash || '', timestamp: String(model.timestamp || Date.now()), service: model.service || '', provider: model.providerDisplay || 'N/A', recipient: model.recipientPhone || 'N/A', fiatValue: model.amountDisplay || '', reference: model.reference  || '', tokenAmount: model.tokenAmount || '', description: model.description || '' });
           const url = 'receipt.html?' + params.toString();
           window.open(url, '_blank', 'noopener');
         } catch (_) { }
@@ -2694,6 +2700,7 @@
         { k: 'Value', v: model.purchaseValue || amt },
         { k: 'Service Provider', v: model.providerDisplay || '—' },
         { k: 'Recipient', v: model.recipientPhone || 'N/A' },
+        { k: 'Description', v: model.description || '—' },
         { k: 'Amount', v: amt },
       ];
       if (model.hash) {
@@ -2745,7 +2752,8 @@
              recipient: model.recipientPhone || 'N/A',
              fiatValue: amtDisplay,
              reference: model.reference || model.ref || 'N/A',
-             tokenAmount: numericAmount
+             tokenAmount: numericAmount,
+             description: model.description || ''
            });
           const url = 'receipt.html?' + params.toString();
           window.open(url, '_blank', 'noopener');
