style(dex): add margin to card class for better spacing

--- a/dex/index.html
+++ b/dex/index.html
@@ -356,6 +356,7 @@
 
     /* Card Styles */
     .card {
+      margin: 0 0 20px;
       background: var(--card-bg);
       border-radius: var(--border-radius);
       padding: 25px;
