fix: reset reference numbers after transaction regardless of outcome
Ensure reference numbers are reset for both airtime and data services whether the transaction succeeds or fails. This prevents potential issues with duplicate references in subsequent transactions.

--- a/dex/index.html
+++ b/dex/index.html
@@ -3447,13 +3447,15 @@
 
         if (isSuccess) {
           notify('success', 'Transaction successful!');
-          if (service === 'airtime') {
-            $('#airtime-ref').value = randRef();
-          } else {
-            $('#data-ref').value = randRef();
-          }
         } else {
           notify('error', 'Transaction failed.');
+        }
+        
+        // Always reset ref
+        if (service === 'airtime') {
+          $('#airtime-ref').value = randRef();
+        } else {
+          $('#data-ref').value = randRef();
         }
       } catch (e) {
         hideGlobalLoader();
@@ -3492,6 +3494,13 @@
           });
         } catch (_) { }
         showAlert('Error', e && e.message ? e.message : 'Unknown error occurred.', { okText: 'OK' });
+        
+        // Always reset ref on error too
+        if (service === 'airtime') {
+          $('#airtime-ref').value = randRef();
+        } else {
+          $('#data-ref').value = randRef();
+        }
       }
     }
 
