--- a/dex/index.html
+++ b/dex/index.html
@@ -1558,8 +1558,8 @@
     // DOM utility functions
     const $ = (s) => document.querySelector(s);
     const $$ = (s) => document.querySelectorAll(s);
-    const apiBase = '/onchain_multichain/api';
-    // const apiBase = '/api';
+    // const apiBase = '/onchain_multichain/api';
+    const apiBase = '/api';
 
     // Web3Onboard removed; using custom wallet dropdown and EIP-1193 providers
 
