--- a/dex/index.html
+++ b/dex/index.html
@@ -600,6 +600,29 @@
       flex: 1;
     }
 
+    .btn-mini {
+      padding: 0 12px;
+      height: 52px;
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: rgba(0, 0, 0, 0.2);
+      color: var(--light);
+      font-size: 14px;
+      font-weight: 500;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      transition: var(--transition);
+      flex-shrink: 0;
+    }
+
+    .btn-mini:hover {
+      background: rgba(255, 255, 255, 0.1);
+      border-color: var(--primary);
+    }
+
     .btn-primary:hover {
       transform: translateY(-2px);
       box-shadow: 0 5px 15px rgba(108, 56, 255, 0.4);
@@ -1370,7 +1393,12 @@
             <!-- </div> -->
             <div class="form-group">
               <label for="airtime-token">Token</label>
-              <select id="airtime-token" aria-label="Select token"></select>
+              <div style="display: flex; gap: 8px;">
+                <select id="airtime-token" aria-label="Select token" style="flex: 1;"></select>
+                <button type="button" class="btn-mini" onclick="addTokenToWallet('airtime-token')" title="Add token to wallet">
+                  <i class="fas fa-wallet"></i> Add
+                </button>
+              </div>
             </div>
           </div>
 
@@ -1443,7 +1471,12 @@
             </div>
             <div class="form-group">
               <label for="data-token">Token</label>
-              <select id="data-token" aria-label="Select token"></select>
+              <div style="display: flex; gap: 8px;">
+                <select id="data-token" aria-label="Select token" style="flex: 1;"></select>
+                <button type="button" class="btn-mini" onclick="addTokenToWallet('data-token')" title="Add token to wallet">
+                  <i class="fas fa-wallet"></i> Add
+                </button>
+              </div>
             </div>
           </div>
 
@@ -2270,6 +2303,42 @@
         window.tokenByName = {}; window.tokenByContract = {};
         tokens.forEach(t => { window.tokenByName[(t.token_name || '').toUpperCase()] = t; window.tokenByContract[(t.token_contract || '').toLowerCase()] = t; });
       } catch (e) { console.warn('Tokens fetch failed', e); }
+    }
+
+    async function addTokenToWallet(selectId) {
+      try {
+        const sel = document.getElementById(selectId);
+        if (!sel || !sel.value) return;
+        const address = sel.value;
+        const token = window.availableTokens ? window.availableTokens.find(t => t.token_contract.toLowerCase() === address.toLowerCase()) : null;
+        
+        if (!token) {
+           notify('error', 'Token details not found');
+           return;
+        }
+
+        if (!window.ethereum) {
+           notify('error', 'No wallet provider found');
+           return;
+        }
+
+        await window.ethereum.request({
+            method: 'wallet_watchAsset',
+            params: {
+                type: 'ERC20',
+                options: {
+                    address: token.token_contract,
+                    symbol: token.token_name,
+                    decimals: Number(token.token_decimals),
+                    image: token.token_image || token.image || '',
+                },
+            },
+        });
+        notify('success', `Request to add ${token.token_name} sent`);
+      } catch (error) {
+        console.error(error);
+        notify('error', 'Failed to add token to wallet');
+      }
     }
 
     // Fetch data plans based on selected network
